alignment fixing

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
   justify-content: center;
 }
 .single-product {
-  padding: 18px;
+  padding: 15px;
   margin: 18px;
   transition: 0.6s;
   background-color: #909e9029;
